--- a/NTierBlog.Service/NTierBlog.Service.csproj
+++ b/NTierBlog.Service/NTierBlog.Service.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
   </ItemGroup>
 
 </Project>
